fix: code refactor and changes